hell-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hell-deploy
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: busybox
        name: hellopod
        command: ["/bin/sh"]
        args: ["-c", "i=0; while true; do echo '$i: Hello from the inside'; i=$((i+1)); sleep 1; done"]  
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
