hello.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: hellopod
  name: hellopod
spec:
  containers:
  - image: busybox
    name: hellopod
    command: ["/bin/sh"]
    args: ["-c", "i=0; while true; do echo '$i: Hello from the inside'; i=$((i+1)); sleep 1; done"]  
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
