test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: hellopod
spec:
 containers:
 - name: count
   image: busybox
   command: ["/bin/sh"]
   args: [ "-c", "i=0; while true; do echo $i: 'Hello from the inside'; i=$((i+1)); sleep 1; done"]
