app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
