hellopod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopod-deployment
spec:
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: hellopod
  template:
    metadata:
      labels:
        app: hellopod
    spec:
      containers:
      - name: count
        image: busybox
        command: ["/bin/sh"]
        args: [ "-c", "i=0; while true; do echo $i: 'Hello from the inside'; i=$((i+1)); sleep 1; done"]
---

apiVersion: v1
kind: Service
metadata:
  name: hellopod-service
spec:
  selector:
    app: hellopod
  ports:
    - protocol: TCP
      port: 80  # Port accessible on the service
      targetPort: 8088  # Target port on the pod (assuming your app is running on 8080)
  type: ClusterIP
